clusters/hive/apps/paperless-ngx/k8s-manifests/tika-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  labels:
    app: tika
  namespace: paperless-ngx
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      serviceAccountName: tika
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: apache/tika:3.3.1.0
          imagePullPolicy: Always
          name: tika
          resources:
            requests:
              cpu: 100m
              memory: 400Mi
            limits:
              # cpu: 200m
              memory: 400Mi
