clusters/hive/apps/paperless-ngx/k8s-manifests/gotenberg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gotenberg
  name: gotenberg
  namespace: paperless-ngx
spec:
  ports:
    - name: gotenberg
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: gotenberg
  sessionAffinity: None
  type: ClusterIP
