clusters/hive/apps/paperless-ngx/k8s-manifests/paperless-ngx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-ngx
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  ports:
    - name: paperless-ngx
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: paperless-ngx
  sessionAffinity: None
  type: ClusterIP
