clusters/hive/apps/paperless-ngx/k8s-manifests/tika-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tika
  name: tika
  namespace: paperless-ngx
spec:
  ports:
    - name: tika
      port: 9998
      protocol: TCP
      targetPort: 9998
  selector:
    app: tika
  sessionAffinity: None
  type: ClusterIP
