clusters/hive/apps/paperless-ngx/k8s-manifests/paperless-ngx-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless-ngx
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: "traefik"
  rules:
    - host: docs.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
            path: /
            pathType: Prefix
